# RNGonGPU

./: CMakeLists.txt  README.md  SECURITY.md  compile_commands.json
benchmark/: CMakeLists.txt  benchmark.cu  benchmark_aes.cu  benchmark_cuda.cu
cmake/: Config.cmake.in
example/: CMakeLists.txt  cuda_rng_example.cu  example.cu  example_aes_drng.cu  example_cpu.cu  example_cuda_rng.cu  nist_tests.cu
src/: CMakeLists.txt
src/rngongpu/: CMakeLists.txt
src/rngongpu/include/common/: aes.cuh  base_rng.cuh
src/rngongpu/include/rand_aes/: aes_rng.cuh  normal_rng.cuh  uniform_rng.cuh
src/rngongpu/include/rand_aes_cpu/: aes_cpu_rng.h
src/rngongpu/include/rand_cuda/: cuda_rng.cuh  cuda_rng_kernels.cuh
src/rngongpu/lib/common/: aes.cu  base_rng.cu
src/rngongpu/lib/rand_aes/: aes_rng.cu  normal_rng.cu  uniform_rng.cu
src/rngongpu/lib/rand_aes_cpu/: aes_cpu_rng.cpp
src/rngongpu/lib/rand_cuda/: cuda_rng.cu  cuda_rng_kernels.cu
test/: test.cu  test_util.h
test/tests_input/drbgvectors_no_reseed/: CTR_DRBG.rsp
test/tests_input/drbgvectors_pr_false/: CTR_DRBG.rsp
test/tests_input/drbgvectors_pr_true/: CTR_DRBG.txt
tests_input/drbgvectors_no_reseed/: CTR_DRBG.txt
tests_input/drbgvectors_pr_false/: CTR_DRBG.rsp  CTR_DRBG.txt
tests_input/drbgvectors_pr_true/: CTR_DRBG.rsp
